sm/sm-b2b-connector/main/connectorConfigs/objects/RSM_Connector_Configuration__mdt/RSM_Connector_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>RSM Connector Configuration</label>
    <pluralLabel>RSM Connector Configurations</pluralLabel>
</CustomObject>