sm/sm-b2b-connector/main/connectorConfigs/objects/RSM_Connector_Configuration__mdt/fields/Config_Type__c.field-meta.xml
<CustomField>
    <fullName>Config_Type__c</fullName>
    <label>Config Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Taxation</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Admin Configuration</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>