sm/sm-b2b-connector/main/connectorConfigs/objects/RSM_Connector_Configuration__mdt/fields/Helper_Text__c.field-meta.xml
<CustomField>
    <fullName>Helper_Text__c</fullName>
    <label>Helper Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>