sm/sm-b2b-connector/main/connectorConfigs/objects/RSM_Connector_Configuration__mdt/fields/Mapping_Fields__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Fields__c</fullName>
    <label>Mapping Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>