sm/sm-b2b-connector/main/connectorConfigs/objects/RSM_Connector_Configuration__mdt/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>